Fix contrast errors

--- a/style.css
+++ b/style.css
@@ -443,7 +443,7 @@ input[type="reset"]:hover {
 }
 
 input[type="submit"] {
-  background-color: #95b98f;
+  background-color: #7e9b79;
   color: white;
   padding: 10px 18px;
   border: 2px solid #719470;
